[package]
name = "rustls"
version = "0.15.0"
edition = "2018"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
license = "Apache-2.0/ISC/MIT"
readme = "README.md"
description = "Rustls is a modern TLS library written in Rust."
homepage = "https://github.com/ctz/rustls"
repository = "https://github.com/ctz/rustls"
categories = ["network-programming", "cryptography"]

[dependencies]
untrusted = "0.6.2"
base64 = "0.10"
log = { version = "0.4.0", optional = true }
ring = "0.14"

[target.'cfg(target_arch = "x86_64")'.dependencies]
serde_json = "1.0.34"
chrono = "0.4.6"
sgx_types = "= 1.0.1"
memoffset = "0.2.1"

[dependencies.webpki]
git = "https://github.com/mesalock-linux/webpki"
tag = "v0.8.0"
default-features = false
features = ["std", "trust_anchor_util"]

[dependencies.sct]
git = "https://github.com/mesalock-linux/sct.rs"
tag = "v0.8.0"
default-features = false

[features]
default=["logging", "aesgcm", "chachapoly", "tls13", "x25519", "ecdh", "ecdsa"]
logging = ["log"]
dangerous_configuration = []
aesgcm = []
chachapoly = []
tls13 = []
x25519 = []
ecdh = []
ecdsa = ["sct/ecdsa"]
quic = []
sgx = ["dangerous_configuration"]

[dev-dependencies]
log = "0.4"
env_logger = "0.6"
mio = "0.6"
docopt = "1.0"
serde = "1.0"
serde_derive = "1.0"
webpki-roots = "0.16"
ct-logs = "0.5"
regex = "1.0"
vecio = "0.1"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"

[[example]]
name = "bogo_shim"
path = "examples/internal/bogo_shim.rs"
required-features = ["dangerous_configuration", "quic"]

[[example]]
name = "trytls_shim"
path = "examples/internal/trytls_shim.rs"

[[example]]
name = "bench"
path = "examples/internal/bench.rs"

[[example]]
name = "tlsclient"
path = "examples/tlsclient.rs"

[[example]]
name = "tlsserver"
path = "examples/tlsserver.rs"

[[example]]
name = "simpleclient"
path = "examples/simpleclient.rs"

[[example]]
name = "simple_0rtt_client"
path = "examples/simple_0rtt_client.rs"
required-features = ["logging"]
